--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.2",
     "firebase": "^12.3.0",
     "motion": "^12.23.22",
     "react": "^19.1.1",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "react-youtube": "^10.1.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
+    "@types/react-canvas-draw": "^1.2.4",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
